--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,15 +9,13 @@
                 "-g",
                 "-I",
                 "${workspaceFolder}/include/",
-                "${workspaceFolder}/src/*.cpp",
-                //"${workspaceFolder}/src/*.c",
-                //"${workspaceFolder}/src/*.s",
+                "${workspaceFolder}/src/*",
                 "-o",
                 "${workspaceFolder}/bin/run",
                 "-lSDL2",
-                "-lSDL2main",
-                "-lSDL2_image",
-                "-lSDL2_mixer"
+                "-lSDL2main"//,
+                //"-lSDL2_image",
+                //"-lSDL2_mixer"
             ],
             "options": {
                 "cwd": "${fileDirname}"
